--- a/g2/Code/Lamazon.WebApp/Views/_ViewImports.cshtml
+++ b/g2/Code/Lamazon.WebApp/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@using Lamazon.WebApp
-@using Lamazon.WebApp.Models
+@using Lamazon.WebModels.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
