--- a/g2/Code/Lamazon.WebApp/wwwroot/css/site.css
+++ b/g2/Code/Lamazon.WebApp/wwwroot/css/site.css
@@ -5,6 +5,20 @@ body {
     padding-bottom: 20px;
 }
 
+.products{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.product-image{
+    height: 300px !important;
+    width: 250px !important;
+}
+
+
+
+
 /* Wrapping element */
 /* Set some basic padding to keep content from hitting the edges */
 .body-content {
