--- a/g2/Code/Lamazon.WebApp/Views/_ViewImports.cshtml
+++ b/g2/Code/Lamazon.WebApp/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using Lamazon.WebApp
 @using Lamazon.WebModels.ViewModels
+@using Lamazon.WebModels.Enums;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
