Implemented controllers, Register and Products View

--- a/g1/LamazonApp/SEDC.LamazonApp/SEDC.Lazamazon.Web/wwwroot/css/site.css
+++ b/g1/LamazonApp/SEDC.LamazonApp/SEDC.Lazamazon.Web/wwwroot/css/site.css
@@ -23,6 +23,18 @@ body {
     width: 100%;
 }
 
+
+.products {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.product-image {
+    height: 300px !important;
+    width: 250px !important;
+}
+
 /* QR code generator */
 #qrCode {
     margin: 15px;
