--- a/g1/LamazonApp/SEDC.LamazonApp/SEDC.Lazamazon.Web/Views/_ViewImports.cshtml
+++ b/g1/LamazonApp/SEDC.LamazonApp/SEDC.Lazamazon.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
 ﻿@using SEDC.Lazamazon.Web
 @using SEDC.Lazamazon.Web.Models
+@using SEDC.Lamazon.WebModels_.ViewModels
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
