--- a/g1/LamazonApp/SEDC.LamazonApp/SEDC.Lazamazon.Web/Views/Shared/_Layout.cshtml
+++ b/g1/LamazonApp/SEDC.LamazonApp/SEDC.Lazamazon.Web/Views/Shared/_Layout.cshtml
@@ -1,4 +1,9 @@
 ﻿<!DOCTYPE html>
+
+@{ 
+    bool isAdmin = User.IsInRole("admin");
+}
+
 <html>
 <head>
     <meta charset="utf-8" />
@@ -26,14 +31,33 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">SEDC.Lazamazon.Web</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Lamazon online store</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
-                    <li><a asp-area="" asp-controller="Product" asp-action="Products">Products</a></li>
+                    @if (isAdmin)
+                    {
+                        <li><a asp-area="" asp-controller="Order" asp-action="ListAllOrders">All orders</a></li>
+                        <li class="align-right"><a asp-area="" asp-controller="Users" asp-action="LogOut">Log out</a></li>
+                    }
+                    else
+                    {
+                        @if (User.Identity.IsAuthenticated)
+                        {
+                            <li><a asp-area="" asp-controller="Order" asp-action="Order">Current order</a></li>
+                            <li><a asp-area="" asp-controller="Order" asp-action="ListOrders">My orders</a></li>
+                            <li><a asp-area="" asp-controller="Product" asp-action="Products">Products</a></li>
+                            <li class="align-right"><a asp-area="" asp-controller="Users" asp-action="LogOut">Log out</a></li>
+                        }
+                        else
+                        {
+                            <li class="align-right"><a asp-area="" asp-controller="Users" asp-action="LogIn">Log in</a></li>
+                        }
+                    }
+
                 </ul>
             </div>
         </div>
