--- a/g1/LamazonApp/SEDC.LamazonApp/SEDC.Lazamazon.Web/Views/_ViewImports.cshtml
+++ b/g1/LamazonApp/SEDC.LamazonApp/SEDC.Lazamazon.Web/Views/_ViewImports.cshtml
@@ -1,5 +1,6 @@
 ﻿@using SEDC.Lazamazon.Web
 @using SEDC.Lazamazon.Web.Models
 @using SEDC.Lamazon.WebModels_.ViewModels
+@using SEDC.Lamazon.WebModels_.Enums
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
