--- a/g3/SEDC.Lamazon/WebApplication/Views/_ViewImports.cshtml
+++ b/g3/SEDC.Lamazon/WebApplication/Views/_ViewImports.cshtml
@@ -1,2 +1,4 @@
-﻿@using WebApplication
+﻿@using WebApplication;
+@using WebModels.ViewModels;
+@using WebModels.Enumerations;
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
