- All views added  - Exceptions added  - Toast messages configured and implemented on LogIn

--- a/g1/LamazonApp/SEDC.LamazonApp/SEDC.Lazamazon.Web/Views/Order/ListAllOrders.cshtml
+++ b/g1/LamazonApp/SEDC.LamazonApp/SEDC.Lazamazon.Web/Views/Order/ListAllOrders.cshtml
@@ -41,9 +41,13 @@
             {
                 <td>Waiting to be delivered!</td>
             }
+            else if(order.Status == StatusTypeViewModel.Declined)
+            {
+                <td>You have succesffuly declined this order!</td>
+            }
             else
             {
-                <td>Waiting for customer!</td>
+            <td>Waiting for customer!</td>
             }
         </tr>
         }
