--- a/g1/LamazonApp/SEDC.LamazonApp/SEDC.Lazamazon.Web/Views/Product/Products.cshtml
+++ b/g1/LamazonApp/SEDC.LamazonApp/SEDC.Lazamazon.Web/Views/Product/Products.cshtml
@@ -34,6 +34,11 @@
             fetch("/Order/AddProduct?productId=" + targetId, {
                 method: "post",
             })
+            //    .then(res => { 
+            //    let data = res;
+
+            //    fetch("/Order/GetMessageResult?result=" + data);
+            //});
         }
     });
 
