--- a/g1/LamazonApp/SEDC.LamazonApp/SEDC.Lazamazon.Web/Views/Shared/Error.cshtml
+++ b/g1/LamazonApp/SEDC.LamazonApp/SEDC.Lazamazon.Web/Views/Shared/Error.cshtml
@@ -4,7 +4,9 @@
 }
 
 <h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
+
+<h1 class="text-danger">You are not authorized to see this order!!!</h1>
+
 
 @if (Model.ShowRequestId)
 {
