--- a/g3/SEDC.Lamazon/WebApplication/Views/Home/Index.cshtml
+++ b/g3/SEDC.Lamazon/WebApplication/Views/Home/Index.cshtml
@@ -1,4 +1,23 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿<div class="row">
+    <div class="col-md-4"></div>
+    <div class="col-md-4">
+        <h1>Welcome to Lamazon</h1>
+    </div>
+    <div class="col-md-4"></div>
+</div>
 
+<div class="row">
+    <div class="col-md-3"></div>
+    <div class="col-md-6">
+        <img src="~/images/lamazon.svg" alt="lamazon logo" height="400"/>
+    </div>
+    <div class="col-md-3"></div>
+</div>
+
+<div class="row">
+    <div class="col-md-4"></div>
+    <div class="col-md-4">
+        <p>This is an ordering shop. Logon and order now!</p>
+    </div>
+    <div class="col-md-4"></div>
+</div>
