--- a/g3/SEDC.Lamazon/WebApplication/Views/Shared/_Layout.cshtml
+++ b/g3/SEDC.Lamazon/WebApplication/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Products" asp-action="Index" class="navbar-brand">Lamazon</a>
+                <img src="~/images/lamazon.svg" alt="lamazon logo" height="50"/>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
