--- a/g2/Code/Lamazon.WebApp/Views/Users/Login.cshtml
+++ b/g2/Code/Lamazon.WebApp/Views/Users/Login.cshtml
@@ -7,7 +7,8 @@
 <h2>Login</h2>
 
 <div class="row">
-    <div class="col-sm-4">
+    <div class="col-md-4 col-md-offset-4">
+        <img src="~/images/lamazon.svg" alt="Lamazon" />
         <form asp-action="LogIn">
             <div class="form-group">
                 <label asp-for="Username" class="control-label"></label>
