--- a/g2/Code/Lamazon.WebApp/Views/Users/Register.cshtml
+++ b/g2/Code/Lamazon.WebApp/Views/Users/Register.cshtml
@@ -4,10 +4,10 @@
     ViewData["Title"] = "Register";
 }
 
-<h2>Register</h2>
-
 <div class="row">
-    <div class="col-sm-4">
+    <div class="col-md-4 col-md-offset-4">
+        <h2 class="text-center">Register</h2>
+
         <form asp-action="Register">
             <div class="form-group">
                 <label asp-for="FirstName" class="control-label"></label>
