--- a/g3/SEDC.Lamazon/WebApplication/Views/Orders/Order.cshtml
+++ b/g3/SEDC.Lamazon/WebApplication/Views/Orders/Order.cshtml
@@ -1,6 +1,7 @@
 ﻿@model OrderViewModel
 
-<h1>Order</h1>
+<h1>@ViewData["TemplateName"]</h1>
+
 <div class="row">
     <div class="col-md-12">
         <label asp-for="User.FullName"></label>
