--- a/g1/LamazonApp/SEDC.LamazonApp/SEDC.Lazamazon.Web/Views/Users/LogIn.cshtml
+++ b/g1/LamazonApp/SEDC.LamazonApp/SEDC.Lazamazon.Web/Views/Users/LogIn.cshtml
@@ -7,41 +7,54 @@
 
 <div class="container">
     <div class="row">
-      <h2>Please login</h2>
-      <div class="col-md-12">
-          <form asp-action="Login" asp-controller="Users" method="post">
-              <div class="row">
-                  <div class="col-md-2"></div>
-                  <div class="col-md-4">
-                      <label asp-for="Username"></label>
-                      <div class="input-group">
-                          <span class="input-group-addon" id="basic-addon1"><span class="glyphicon glyphicon-user" aria-hidden="true"></span></span>
-                          <input asp-for="Username" type="text" class="form-control" placeholder="Username" />
-                      </div>
-                  </div>
+        <h2>Please login</h2>
+        <div class="col-md-12">
+            <form asp-action="Login" asp-controller="Users" method="post">
+                <div class="row">
+                    <div class="col-md-2"></div>
+                    <div class="col-md-4">
+                        <label asp-for="Username"></label>
+                        <div class="input-group">
+                            <span class="input-group-addon" id="basic-addon1"><span class="glyphicon glyphicon-user" aria-hidden="true"></span></span>
+                            <input asp-for="Username" type="text" class="form-control" placeholder="Username" />
+                        </div>
+                    </div>
 
-              </div>
-              <br />
-              <div class="row">
-                  <div class="col-md-2"></div>
-                  <div class="col-md-4">
-                      <label asp-for="Password"></label>
-                      <div class="input-group">
-                          <span class="input-group-addon" id="basic-addon1"><span class="glyphicon glyphicon-lock" aria-hidden="true"></span></span>
-                          <input asp-for="Password" type="password" class="form-control" placeholder="Password" />
-                      </div>
-                  </div>
-
-              </div>
-              <div class="row">
-                  <div class="col-md-5"></div>
-                  <div class="col-md-2">
-                      <button class="btn btn-success" type="submit">Login</button>
-                  </div>
-              </div>
-          </form>
-      </div>
+                </div>
+                <br />
+                <div class="row">
+                    <div class="col-md-2"></div>
+                    <div class="col-md-4">
+                        <label asp-for="Password"></label>
+                        <div class="input-group">
+                            <span class="input-group-addon" id="basic-addon1"><span class="glyphicon glyphicon-lock" aria-hidden="true"></span></span>
+                            <input asp-for="Password" type="password" class="form-control" placeholder="Password" />
+                        </div>
+                    </div>
+                </div>
+                <br />
+                <div class="row">
+                    <div class="col-md-5"></div>
+                    <div class="col-md-2">
+                        <button class="btn btn-success mt-5" type="submit">Login</button>
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-md-12">
+            <div class="col-md-6">
+                <h4>
+                    Don't have an account?
+                    <a asp-action="Register" asp-controller="Users">
+                        Register here
+                    </a> and proceed buying!
+                </h4>
+            </div>
+        </div>
     </div>
 </div>
+
 
 
